--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="projects.html">Projects</a></li>
-      <!-- <li><a href="certification.html">Certifications</a></li> -->
+      <li><a href="certification.html">Certifications</a></li>
       <li><a href="education.html">Education</a></li>
     </ul>
     
